# chaos-driver-daq

./: .cproject  .gitignore  .project  CMakeLists.txt  REAMD.md  driver_daq.files  driver_daq.includes
models/: CMakeLists.txt
models/Libera/: CMakeLists.txt  ChaosAttribute.cpp  ChaosAttribute.h  ChaosControllerLibera.cpp  ChaosControllerLibera.h  CmdAcquireDafneAccumulatorBPM.cpp  CmdAcquireDafneAccumulatorBPM.h  CmdDafneAccumulatorBPM.cpp  CmdDafneAccumulatorBPM.h  CmdDefaultDafneAccumulatorBPM.cpp  CmdDefaultDafneAccumulatorBPM.h  CmdEnvDafneAccumulatorBPM.cpp  CmdEnvDafneAccumulatorBPM.h  CmdLiberaAcquire.cpp  CmdLiberaAcquire.h  CmdLiberaDefault.cpp  CmdLiberaDefault.h  CmdLiberaEnv.cpp  CmdLiberaEnv.h  CmdLiberaTime.cpp  CmdLiberaTime.h  DafneAccumulatorBPMSync.cpp  DafneAccumulatorBPMSync.h  LiberaBrillianceCSPIDriver.cpp  LiberaBrillianceCSPIDriver.h  LiberaBrilliancePlusDriver.cpp  LiberaBrilliancePlusDriver.h  LiberaBrillianceSlow.cpp  LiberaBrillianceSlow.h  LiberaBrillianceSlowDriver.cpp  LiberaBrillianceSlowDriver.h  LiberaData.cpp  LiberaData.h  LiberaSoftDriver.cpp  LiberaSoftDriver.h  RTBPMLibera.cpp  RTBPMLibera.h  SCDafneAccumulatorBPMSync.cpp  SCDafneAccumulatorBPMSync.h  SCLiberaCU.cpp  (+2 more)
models/Libera/conf/etc/default/: libera-cu
models/Libera/conf/etc/init.d/: libera-cu.sh
models/Libera/cspi/: .depend  cordic.h  cspi.h  cspi_events.c  cspi_impl.h  debug.h  ebpp.c  hbpp.c  llrf.h  lplld.h  pool.c  pool.h
models/Libera/driver/cspi/: CMakeLists.txt  LiberaBrillianceCSPIDriver.cpp  LiberaBrillianceCSPIDriver.h  UnitServerIgnore  bbfp.c  bbfp.h  cordic.c  cspi.c  dscd.h  ebpp.c  ebpp.h  eventd.c  eventd.h  hbpp.h
models/Libera/driver/epics/: LiberaBrillianceEpicsDriver.cpp  LiberaBrillianceEpicsDriver.h  LiberaBrillianceSPEpicsDriver.cpp  LiberaBrillianceSPEpicsDriver.h  LiberaEpicsBase.cpp  LiberaEpicsBase.h  LiberaEpicsDriver.cpp  LiberaEpicsDriver.h  LiberaSPEpicsDriver.cpp  LiberaSPEpicsDriver.h
models/Libera/driver/libera-driver-2-04-ebpp/: .ebpp.o.cmd  .libera.ko.cmd  .libera.mod.o.cmd  .libera.o.cmd  .libera_adc.o.cmd  .libera_cfg.o.cmd  .libera_dd.o.cmd  .libera_dsc.o.cmd  .libera_event.o.cmd  .libera_fa.o.cmd  .libera_main.o.cmd  .libera_pm.o.cmd  .libera_sa.o.cmd  Rules.make  bbfp.c  bbfp.h  dpp.c  dpp.h  ebpp.c  ebpp.h  hbpp.c  hbpp.h  libera.h  libera.mod.c  libera_adc.c  libera_adc.h  libera_cfg.c  libera_cfg.h  libera_dd.c  libera_dd.h  libera_dsc.c  libera_dsc.h  libera_event.c  libera_event.h  libera_fa.c  libera_fa.h  libera_kernel.h  libera_main.c  libera_pm.c  libera_pm.h  (+3 more)
models/Libera/driver/libera-driver-2-04-ebpp/debian/: changelog  control  copyright  postinst  rules
models/Libera/driver/libera-driver-2-04-ebpp/tests/: test_adc.cpp  test_attn.cpp  test_cfg.cpp  test_dd.cpp  test_dd_llseek.cpp  test_dd_read.cpp  test_dd_read_bbfp.cpp  test_dd_read_checklinear.cpp  test_dd_sdram.cpp  test_dd_sdram_offset.cpp  test_dd_sdram_offset2.cpp  test_dd_sdram_raw.cpp  test_fa.cpp  test_low_MCenabletrig.cpp  test_low_SCenabletrig.cpp  test_low_ctime.cpp  test_low_ctime_loop.cpp  test_low_event.cpp  test_low_event_nonblock.cpp  test_low_event_nonblock_select.cpp  test_low_peek.cpp  (+15 more)
models/Libera/driver/mci/: #CMakeLists.txt#  CMakeLists.txt  LiberaBrilliancePlusDriver.cpp  LiberaBrilliancePlusDriver.h  UnitServerIgnore
models/Libera/driver/msp/: Changelog  README
models/Libera/driver/soft/: CMakeLists.txt  LiberaSoftDriver.cpp  LiberaSoftDriver.h
models/Libera/etc/: restart_accumulator.sh  restart_all.sh  stop_all.sh
models/Libera/etc/default/: libera-cu
models/Libera/etc/openntpd/: ntpd.conf
models/Libera/msp/: COPYING
models/Libera/test/: BPMSync.cpp  daqLiberaClient.cpp  daqLiberaServer.cpp  libera_acquire_pool.sh  libera_cu_launch.sh
models/LiberaPlus/examples/mci_tutorial/: Makefile.names  Makefile.rules  common.h
models/LiberaPlus/include/bmc/: board_config.h  connection_callback.h  i2c_bus_params.h  i2c_device_SFP_EEPROM.h  i2c_device_SI5338.h  i2c_device_spd_eeprom.h  i2c_fpga_amba.h  spi_bus_controller.h  spi_device.h  spi_device_DAC7554.h  spi_device_serial_flash.h  system_event_log.h
models/LiberaPlus/include/iapp/: activator.h  declarations.h  identification_block.h  libera_fpga_object.h  libera_lvds_receiver.h  libera_signal_handler.h  libera_spi_bus_device_AD9510.h  libera_spi_bus_device_DAC8581.h  libera_wait_object.h  master_slave.h  multi_port_table.h
models/LiberaPlus/include/imath/: iosystem.h  maf.h  random.h  statistics.h
models/LiberaPlus/include/inet/: declarations.h  i_remote_node.idl  i_remote_signal.idl  i_signal_receiver.h  i_signal_receiver.idl  i_types.h  i_types.idl  interface_version.h  orb_manager.h
models/LiberaPlus/include/ipmi-ext/: ipmi_itech_defines.h
models/LiberaPlus/include/ireg/: dispatcher.h  expression_terminals.h  reg_enum_mixin.h  reg_ref_enum_node.h  reg_type_node.h
models/LiberaPlus/include/isig/: array.h  data_on_demand_local_source_base.h  data_on_demand_synthetic_source.h  dod_client.h  dod_controller_interface.h  file_stream.h  libera_machine_time.h  libera_stream.h  signal_dispatch_base.h  simd_vector.h  simple_position_controller.h  stream.h  stream_client.h
models/LiberaPlus/include/istd/: compat.h  convert.h  id.h  logfile.h  stop_watch.h  string.h  synchronizer.h  thread_controller.h  worker_thread.h
models/LiberaPlus/include/mci/: declarations.h  dispatcher_thread.h  mci.h  mci_util.h  node_factory_decl.h  node_structure.h  notification_client.h  remote_node.h  remote_node_structure.h
models/LiberaPlus/include/utest/: global_environment.h  utest.h
models/LiberaPlus/lib/: libera-functions  libliberaiapp.so.2.8  libliberaimath.so.2.8  libliberaireg.so.2.8
models/btf/: CMakeLists.txt  CmdBTFdaqAcquire.cpp  CmdBTFdaqAcquire.h  CmdBTFdaqDefault.cpp  CmdBTFdaqDefault.h  RTBTFSync.cpp  RTBTFSync.h  RTBTFdaqCU.cpp  RTBTFdaqCU.h  RTBTFdaqSimCU.cpp  RTBTFdaqSimCU.h
models/btf/test/: main.cpp
models/caen/: CMakeLists.txt  RTCAEN.cpp  RTCAEN.h  RTCAEN775.cpp  RTCAEN775.h  RTCAEN792.cpp  RTCAEN792.h  RTCAEN965.cpp  RTCAEN965.h
models/caen/test/: main.cpp
(+374 files in other folders)
